<resources>
    <string name="app_name">JournApp</string>
    <string name="error_password">Password must be at least 8 characters.</string>
    <string name="error_email">Please enter valid email address. (e.g. email@example.org)</string>
    <string name="email_text">Email</string>
    <string name="password_text">Password</string>
    <string name="login_text">Login</string>
    <string name="name_text">Name</string>
    <string name="register_text">Register</string>
    <string name="to_register_text">Don\'t have an account? <b>Register Now!</b> </string>
    <string name="to_login_text">Already have an account? <b>Login Now!</b></string>
    <string name="register_now">Register Now!</string>
    <string name="login_now">Login Now!</string>
    <string name="story_image">Story Image</string>
    <string name="name">Name</string>
    <string name="item_description">Item Description</string>
    <string name="time_and_date">Time and Date</string>
    <string name="add_story_button">Add Story Button</string>
    <string name="gallery">Gallery</string>
    <string name="take_photo">Take Photo</string>
    <string name="describe_your_journey">Describe your journey!</string>
    <string name="send_your_journey">Send Your Journey</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="logout_message">Are you sure you want to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="language">Language</string>

    <string name="appwidget_text" translatable="false">Journ App</string>
    <string name="empty_text">NO DATA</string>
    <string name="app_widget_description" translatable="false">This is an app widget description</string>
    <string name="widget_image">Widget Image</string>
    <string name="retry">Retry</string>
    <string name="title_activity_maps" translatable="false">MapsActivity</string>
    <string name="maps" translatable="false">Maps</string>
    <string name="marker_image" translatable="false">Marker Image</string>
    <string name="share_location">Share Location</string>
</resources>